Fix for bug 496633, TypeError thrown when Vector types from different loaded abcs collide.  Also pushing new testcase for that bug.  (r=stejohns)